--- a/app/src/main/res/layout/films_and_serials_vh.xml
+++ b/app/src/main/res/layout/films_and_serials_vh.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/mainCardView"
+    android:layout_width="190dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -14,24 +15,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/main_photo_vh"
             android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:src="@drawable/search"/>
+            tools:src="@drawable/search" />
 
         <ImageView
             android:id="@+id/like_vh"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/ic_baseline_favorite_24"/>
+            tools:src="@drawable/ic_like"
+            android:layout_margin="8dp"/>
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/image_barrier"
@@ -46,7 +48,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image_barrier"
-            android:layout_margin="4dp"
+            android:layout_marginStart="8dp"
             tools:text="Test Film Name"
             android:textColor="@color/black"
             android:textSize="18sp"
