--- a/app/src/main/res/layout/top_fragment.xml
+++ b/app/src/main/res/layout/top_fragment.xml
@@ -61,4 +61,14 @@
         app:constraint_referenced_ids="backButton,top_title"
         app:barrierDirection="bottom"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/topRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/title_barrier"
+        app:layout_constraintStart_toStartOf="@id/start_guideline"
+        app:layout_constraintEnd_toEndOf="@id/end_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline">
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
