--- a/app/src/main/res/layout/films_and_serials_vh.xml
+++ b/app/src/main/res/layout/films_and_serials_vh.xml
@@ -11,7 +11,8 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
