--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -61,33 +61,47 @@
         app:constraint_referenced_ids="backButton,top_title"
         app:barrierDirection="bottom"/>
 
-    <ImageView
-        android:id="@+id/backdropPath"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/title_barrier"
         app:layout_constraintStart_toStartOf="@id/start_guideline"
-        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>
+        app:layout_constraintEnd_toEndOf="@id/end_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline">
 
-    <TextView
-        android:id="@+id/originalName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/backdropPath"
-        app:layout_constraintStart_toStartOf="@id/start_guideline"
-        android:textSize="24sp"
-        android:textColor="@color/black"
-        tools:text="Test"
-        android:paddingTop="16dp"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/overview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/originalName"
-        app:layout_constraintStart_toStartOf="@id/start_guideline"
-        android:textSize="24sp"
-        android:textColor="@color/black"
-        tools:text="Test"
-        android:paddingTop="16dp"/>
+            <ImageView
+                android:id="@+id/backdropPath"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/originalName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/backdropPath"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                tools:text="Test"
+                android:paddingTop="16dp"/>
+
+            <TextView
+                android:id="@+id/overview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/originalName"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                tools:text="Test"
+                android:paddingTop="16dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
