--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -173,7 +173,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="Поиск"
-                android:text="Поиск"
+                android:text="@string/search"
                 android:layout_margin="8dp"
                 android:textColor="@color/black"
                 android:textSize="28sp"
